Video banner fix on mobile

--- a/_sass/base/_colors.scss
+++ b/_sass/base/_colors.scss
@@ -2,6 +2,7 @@ $text-color: #333;
 $background-color: #F9F9F9;
 $brand-color: #FF5F35;
 $brand-color-2: #45D352;
+$highlight-color: #50F964;
 
 $muted-text-color: #999;
 
